test/runnable/withtest.nt
module withtest;

macro import std.macro.assert;

struct S
{
    int i, k;
}

void main() {
    with (S(5, 3))
    {
        void nested() {
            assert(i + k == 8);
        }
        assert(i + k == 8);
        nested;
    }
}
