test/fail_compilation/struct_private_member.nt
module struct_private_member;

struct S {
    private int i;
}

void main() {
    int i = S().i;
}
